CRUD Tipo Empaque, ordenamiento y filtros.

--- a/CreArte/Views/Shared/header.cshtml
+++ b/CreArte/Views/Shared/header.cshtml
@@ -30,7 +30,9 @@
         { "subcategorias", "Sub Categorías" },
         { "marcas", "Marcas" },
         { "unidadesmedida", "Unidades de Medida" },
-        // { "subcategorias", "Sub Categorías" },
+        { "tiposempaque", "Tipos de Empaque" },
+        { "tiposproducto", "Tipos de Producto" },
+        { "tiposcliente", "Tipos de Cliente" },
         { "empresa", "Empresa" }
     };
 
