--- a/CreArte/Views/Empleados/Details.cshtml
+++ b/CreArte/Views/Empleados/Details.cshtml
@@ -1,8 +1,4 @@
-﻿@* ===============================================
-   RUTA: Views/Empleados/Details.cshtml
-   DESCRIPCIÓN: PartialView (Layout = null) para inyectar en SweetAlert2
-   =============================================== *@
-@model CreArte.ModelsPartial.EmpleadoDetailsVM
+﻿@model CreArte.ModelsPartial.EmpleadoDetailsVM
 @{
     ViewData["Title"] = "Detalle de Empleado";
     Layout = null;
